--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <header>
+      <h1>Video Game Sales</h1>
+      <h2>Top 100 Most Sold Video Games Grouped by Platform</h2>
+    </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
     <script src="js/script.js"></script>
   </body>
