--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Video Game Sales</h1>
       <h2>Top 100 Most Sold Video Games Grouped by Platform</h2>
     </header>
+    <footer>Coded by <a href="https://autumnbullard-portfolio.herokuapp.com" target="_blank">Autumn Bullard</a></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
     <script src="js/script.js"></script>
   </body>
